<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Prateek Srivastava
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="couchpotato">CouchPotato</string>

  <!-- Library Fragment -->
  <string name="error_inaccessible_server">Could not reach CouchPotato server.</string>
  <string name="error_inaccessible_server_prompt">Please check your server settings.</string>
  <string name="filter">Filter</string>
  <string name="wanted">Wanted</string>
  <string name="snatched">Snatched</string>
  <string name="error_server_not_set">CouchPotato server settings are not configured.</string>
  <string name="error_server_not_set_prompt">Please set your settings.</string>

  <!-- Main Activity -->
  <string name="library">Library</string>
  <string name="popular">Popular</string>
  <string name="top_rated">Top Rated</string>
  <string name="upcoming">Upcoming</string>
  <string name="now_playing">Now Playing</string>
  <string name="discover">Discover</string>

  <!-- Movie Activity -->
  <string name="similar_movies">Similar Movies</string>
  <string name="videos">Videos</string>
  <string name="crew">Crew</string>
  <string name="cast">Cast</string>
  <string name="crew_name_display_format">{name} as {role}</string>
  <string name="movie_added">Successfully added {movie} to your wanted list</string>
  <string name="add">Add</string>
  <string name="share">Share</string>
  <string name="reviews">Reviews</string>
  <string name="no_items">No {items} available.</string>
  <string name="overview">Overview</string>
  <string name="movie_runtime">
    <b>{minutes}</b>
    mins
  </string>
  <string name="movie_vote_count"><b>{vote_count}</b>\nVotes
  </string>
  <string name="genres">Genres</string>
  <string name="languages">Languages</string>
  <string name="countries">Countries</string>
  <string name="production_companies">Production Companies</string>

  <!-- Login Activity -->
  <string name="username_hint">Username</string>
  <string name="password_hint">Password</string>
  <string name="host_hint">Host</string>
  <string name="required">Required</string>
  <string name="invalid">Invalid</string>
  <string name="invalid_fields">Please check all fields</string>
  <string name="invalid_credentials">Credentials rejected. Please try again.</string>
  <string name="inaccessible_server_crouton">Could not reach CouchPotato server at {url}. Try
    clicking this to view in a browser.
  </string>
  <string name="cancel">Cancel</string>
  <string name="login">Login</string>
  <string name="done">Done</string>
  <string name="login_successful">Successfully logged in</string>
  <string name="action_couchpotato_server">CouchPotato Settings</string>

  <!-- About screen !-->
  <string name="action_about">About</string>
  <string name="developer">Developer</string>
  <string name="google_plus" translatable="false">+Prateek Srivastava</string>
  <string name="twitter" translatable="false">\@f2prateek</string>

</resources>
