<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Prateek Srivastava
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/menu_action_library_filter"
      android:icon="@drawable/ab_filter"
      android:showAsAction="always"
      android:title="@string/filter">
    <menu>
      <item
          android:id="@+id/menu_wanted"
          android:checkable="true"
          android:checked="true"
          android:title="@string/wanted"/>
      <item
          android:id="@+id/menu_snatched"
          android:checkable="true"
          android:checked="true"
          android:title="@string/snatched"/>
    </menu>
  </item>
</menu>