<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Prateek Srivastava
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:padding="@dimen/holo_padding_medium"
        android:scaleType="centerInside"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/application_name"
        android:padding="@dimen/holo_padding_medium"
        style="@android:style/TextAppearance.DeviceDefault.Large"/>

    <com.f2prateek.couchpotato.ui.widget.FloatLabelLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@android:style/TextAppearance.DeviceDefault.Small">

      <EditText
          android:id="@+id/host"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/host_hint"
          android:inputType="text|textUri"
          android:imeOptions="actionNext"
          android:nextFocusDown="@+id/username"/>

    </com.f2prateek.couchpotato.ui.widget.FloatLabelLayout>

    <com.f2prateek.couchpotato.ui.widget.FloatLabelLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@android:style/TextAppearance.DeviceDefault.Small">

      <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/username_hint"
          android:inputType="textNoSuggestions"
          android:imeOptions="actionNext"
          android:nextFocusDown="@+id/password"/>

    </com.f2prateek.couchpotato.ui.widget.FloatLabelLayout>

    <com.f2prateek.couchpotato.ui.widget.FloatLabelLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@android:style/TextAppearance.DeviceDefault.Small">

      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password_hint"
          android:inputType="textPassword"
          android:imeActionId="@+id/action_login"
          android:imeActionLabel="@string/login"
          android:imeOptions="actionDone"/>

    </com.f2prateek.couchpotato.ui.widget.FloatLabelLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:fontFamily="sans-serif-condensed"/>

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </LinearLayout>
</ScrollView>